# InoDAQV2

./: .clang-format  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  upload
gui/: __init__.py  actions.py  consts.py  frame_analog_read.py  frame_digital_pins.py  frame_digital_read.py  frame_pwm.py  frame_tone.py  gui.py  main.py  menu.py
gui/components/: actions.py  extensions.py
gui/static/: base.css  dashboard.js
gui/templates/: dashboard.html
ino/: command_pwm.cpp  upload.py
inodaqv2/: command_aread.cpp  command_aread.h  command_aread.py  command_dig.cpp  command_dig.h  command_dig.py  command_dread.cpp  command_dread.h  command_dread.py  command_ping.cpp  command_ping.h  command_pwm.cpp  command_pwm.h  command_pwm.py  command_tone.cpp  command_tone.h  commands.cpp  commands.hpp  helpers.cpp  helpers.h  helpers.hpp  inodaqv2.ino  main.py  serial_connection.py  upload.py
inodaqv2/components/: actions.py  logger.py
inodaqv2/ino/: command_aread.h  command_dig.cpp  command_pwm.cpp  command_tone.cpp  command_tone.h  helpers.cpp  helpers.h  ino.ino
inodaqv2/static/: base.css  dashboard.js
inodaqv2/templates/: dashboard.html
src/: command_dig.cpp
src/configs/: inodaqv2.ini
src/ino/: command_aread.cpp  command_dig.cpp  command_dig.h  command_dread.cpp  command_dread.h  command_ping.cpp  command_ping.h  command_toggle_digital_pin.cpp  command_toggle_digital_pin.h  (+1 more)
tests/: conftest.py  test_command_aread.py  test_command_dig.py  test_command_dread.py  test_command_hello.py  test_command_ping.py  test_command_pwm.py  test_command_tone.py
(+17 files in other folders)
