[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "InoDAQV2"
version = "1.0"
description = "A multifunction I/O device built atop the ATmega328P microprocessor."
requires-python = ">=3.8"
dependencies = [
    "pyserial",
    "pytest",
    "typing-extensions",
]

[project.scripts]
inodaq = "src.py.main:main"
